--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 before_install: yarn global add greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 script:
-- npm run prepublish
+- npm run ci
 after_script: greenkeeper-lockfile-upload
 deploy:
   provider: npm
