--- a/package.json
+++ b/package.json
@@ -31,10 +31,8 @@
     "borders": "^1.0.2",
     "chai": "^4.0.2",
     "eslint": "^3.15.0",
-    "eslint-config-actano": "^6.1.0",
+    "eslint-config-actano-base": "^2.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
     "mocha": "^3.3.0",
     "sinon": "^2.2.0",
     "sinon-chai": "^2.11.0"
