--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-transform-async-generator-functions": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
+    "borders": "^1.3.0",
     "chai": "^4.0.2",
     "eslint": "^4.9.0",
     "eslint-config-actano-base": "^3.0.0",
@@ -36,7 +37,7 @@
     "sinon": "^4.0.0",
     "sinon-chai": "^3.0.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "borders": "^1.3.0"
   }
 }
