--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "lint": "eslint src test",
     "clean": "rm -rf lib"
   },
+  "engines": {
+    "node": ">=8"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-plugin-add-module-exports": "^0.2.1",
