--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "borders-smtp-client",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Specification for system border smtp-client",
   "author": "Actano GmbH (https://rplan.com/)",
   "license": "MIT",
@@ -41,6 +41,6 @@
     "sinon-chai": "^3.0.0"
   },
   "peerDependencies": {
-    "borders": "^1.3.0"
+    "borders": "^2.0.0-beta.1"
   }
 }
