--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "babel-plugin-transform-async-generator-functions": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
-    "borders": "^2.0.0-beta.1",
-    "chai": "^4.0.2",
-    "eslint": "^5.0.1",
+    "borders": "^2.0.0",
+    "chai": "^4.2.0",
+    "eslint": "^5.7.0",
     "eslint-config-actano-base": "^4.0.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.0.1",
-    "sinon": "^6.1.3",
+    "sinon": "^7.1.0",
     "sinon-chai": "^3.0.0"
   },
   "peerDependencies": {
-    "borders": "^2.0.0-beta.1"
+    "borders": "^2.0.0"
   }
 }
